--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,7 @@
     ],
     "require": {
         "php": ">=5.3.2",
-        "symfony/symfony": "2.0.*",
-        "sonata-project/admin-bundle": "2.0.*",
-        "sonata-project/doctrine-orm-admin-bundle": "2.0.*"
+        "sonata-project/doctrine-orm-admin-bundle": "master"
     },
     "require-dev": {
         "doctrine/orm": "2.1.*"
