--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     },
     "require-dev": {
         "sonata-project/doctrine-orm-admin-bundle": "dev-master",
-        "doctrine/orm": ">2.1.*"
+        "doctrine/orm": ">2.1"
     },
     "autoload": {
         "psr-0": { "VinceT\\BaseBundle": "" }
