--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
         "php": ">=5.3.2"
     },
     "require-dev": {
-        "sonata-project/doctrine-orm-admin-bundle": "dev-master",
-        "doctrine/orm": ">2.1"
+        "sonata-project/doctrine-orm-admin-bundle": "dev-master"
     },
     "autoload": {
         "psr-0": { "VinceT\\BaseBundle": "" }
