--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,7 @@
         }
     ],
     "require": {
-        "php": ">=5.3.2"
-    },
-    "require-dev": {
+        "php": ">=5.3.2",
         "sonata-project/doctrine-orm-admin-bundle": "dev-master"
     },
     "autoload": {
