--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     ],
     "require": {
         "php": ">=5.3.2",
-        "sonata-project/doctrine-orm-admin-bundle": "2.*"
+        "sonata-project/doctrine-orm-admin-bundle": "~2.*",
+        "sensio/generator-bundle": "~2.3"
     },
     "autoload": {
         "psr-0": { "VinceT\\BaseBundle": "" }
@@ -19,7 +20,7 @@
     "target-dir": "VinceT/BaseBundle",
     "extra": {
         "branch-alias": {
-            "dev-master": "2.2.x-dev"
+            "dev-master": "2.3.x-dev"
         }
     }
 }
