--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "php": ">=5.3.2",
         "sonata-project/doctrine-orm-admin-bundle": "~2.*",
-        "sensio/generator-bundle": "~2.3"
+        "sensio/generator-bundle": "~2.3.*"
     },
     "autoload": {
         "psr-0": { "VinceT\\BaseBundle": "" }
