--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
     ],
     "require": {
         "php": ">=5.3.2",
-        "sonata-project/doctrine-orm-admin-bundle": "~2.*",
-        "sensio/generator-bundle": "~2.3.*"
+        "sonata-project/doctrine-orm-admin-bundle": "~2.2",
+        "sensio/generator-bundle": "~2.3"
     },
     "autoload": {
         "psr-0": { "VinceT\\BaseBundle": "" }
