--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     ],
     "require": {
         "php": ">=5.3.2",
+        "sonata-project/admin-bundle": "~2.2,>=2.2.4",
         "sonata-project/doctrine-orm-admin-bundle": "~2.2",
         "sensio/generator-bundle": "~2.3"
     },
