--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,10 @@
     ],
     "require": {
         "php": ">=5.3.2",
+        "symfony/symfony": "~2.8",
         "sonata-project/admin-bundle": "~2.2,>=2.2.4",
         "sonata-project/doctrine-orm-admin-bundle": "~2.2",
-        "sensio/generator-bundle": "~2.3"
+        "sensio/generator-bundle": "~3.0"
     },
     "autoload": {
         "psr-0": { "VinceT\\BaseBundle": "" }
