--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
     "require": {
         "php": ">=5.3.2",
         "symfony/symfony": "~2.8",
-        "sonata-project/admin-bundle": "~2.2,>=2.2.4",
-        "sonata-project/doctrine-orm-admin-bundle": "~2.2",
+        "sonata-project/admin-bundle": "~2.2,>=2.2.4 || ^3.0",
+        "sonata-project/doctrine-orm-admin-bundle": "~2.2 || ^ 3.0",
         "sensio/generator-bundle": "~3.0"
     },
     "autoload": {
